tests/rosetta/out/Kotlin/21-game.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/21-game.kt:22:22: error: type mismatch: inferred type is Int? but Int was expected
        n = n * 10 + digits[str.substring(i, i + 1)]
                     ^
